--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+	# Informations sur la BDD a exploiter
+# ajouter "?serverTimezone=GMT" a l'url est obligatoire pour MySQL 5
+spring.datasource.url=jdbc:mysql://localhost:3306/orleans_joue_db?serverTimezone=GMT
+spring.datasource.username=admin
+spring.datasource.password=wcsorleansjoue0919
+
+# Autoriser l'affichage des requetes SQL faites par Hibernate
+spring.jpa.show-sql=true
+
+# Gérer Hibernate
+spring.jpa.hibernate.ddl-auto=create
+
+# Sélectionner un "dialecte" permet a Hibernate de generer du SQL adapté à la version choisie
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
