--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ajouter "?serverTimezone=GMT" a l'url est obligatoire pour MySQL 5
 spring.datasource.url=jdbc:mysql://localhost:3306/orleans_joue_db?serverTimezone=GMT
 spring.datasource.username=admin
-spring.datasource.password=wcsorleansjoue0919
+spring.datasource.password=Wcsorleansjoue0919%
 
 # Autoriser l'affichage des requetes SQL faites par Hibernate
 spring.jpa.show-sql=true
