modifications tables tasks et event + ajout chargement jeux de données

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.show-sql=true
 
 # Gérer Hibernate
 spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
 
 # Sélectionner un "dialecte" permet a Hibernate de generer du SQL adapté à la version choisie
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
