--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.1.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
+		
 	</parent>
 	<groupId>com.wildcodeschool</groupId>
 	<artifactId>sept2019-java-orleans-festival-orleans-joue</artifactId>
@@ -61,6 +62,36 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<groupId>nl.geodienstencentrum.maven</groupId>
+				<artifactId>sass-maven-plugin</artifactId>
+				<version>3.7.2</version>
+				<executions>
+	                <execution>
+	                    <id>lint</id>
+	                    <phase>validate</phase>
+	                    <goals>
+	                        <goal>scss-lint</goal>
+	                    </goals>
+	                </execution>
+	                <execution>
+	                    <id>build</id>
+	                    <phase>generate-resources</phase>
+	                    <goals>
+	                        <goal>update-stylesheets</goal>
+	                    </goals>
+	                </execution>
+	            </executions>
+            <configuration>
+                <sassSourceDirectory>
+                    ${project.basedir}/src/main/resources/static/SASS
+                </sassSourceDirectory>
+                <destination>
+                    ${project.basedir}/src/main/resources/static/CSS
+                </destination>
+            </configuration>
 			</plugin>
 		</plugins>
 	</build>
