--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,9 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 .flattened-pom.xml
 
+### UML ###
+sept2019-java-orleans-festival-orleans-joue.uml
+sept2019-java-orleans-festival-orleans-joue.umlcd
 # End of https://www.gitignore.io/api/java,maven,eclipse,java-web,code-java
 
 
