--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,13 @@
 
-	# Informations sur la BDD a exploiter
-# ajouter "?serverTimezone=GMT" a l'url est obligatoire pour MySQL 5
+app.upload.dir=E:/Wildcodeschool/Projets/sept2019-java-orleans-festival-orleans-joue/src/main/resources/static/pictures/uploads
+spring.servlet.multipart.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/orleans_joue_db?serverTimezone=GMT
 spring.datasource.username=admin
 spring.datasource.password=Wcsorleansjoue0919%
-
 # Autoriser l'affichage des requetes SQL faites par Hibernate
 spring.jpa.show-sql=true
-
 # Gérer Hibernate
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
-
 # Sélectionner un "dialecte" permet a Hibernate de generer du SQL adapté à la version choisie
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
