chemin relatif sur image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-
-app.upload.dir=E:/Wildcodeschool/Projets/sept2019-java-orleans-festival-orleans-joue/src/main/resources/static/pictures/uploads
+maven.basedir=@project.basedir@
+app.upload.dir=${maven.basedir}/src/main/resources/static/pictures/uploads
 spring.servlet.multipart.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/orleans_joue_db?serverTimezone=GMT
 spring.datasource.username=admin
