--- a/.gitignore
+++ b/.gitignore
@@ -153,5 +153,5 @@ sept2019-java-orleans-festival-orleans-joue.uml
 sept2019-java-orleans-festival-orleans-joue.umlcd
 # End of https://www.gitignore.io/api/java,maven,eclipse,java-web,code-java
 .attach_pid*
-
+src/main/ressources/static/pictures/*
 
